--- a/content/50x.html
+++ b/content/50x.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="https://stima.slickteam.fr/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Slickteam.fr</title>
+  <title>Docker.bzh</title>
   <style>
     html, body {
       height: 100%;
@@ -33,8 +32,7 @@
 </head>
 <body>
   <div>
-    <h1>Page d'erreur du domaine test.bzh</h1>
-    <img src="https://slickteam.fr/dist/images/logo-full.64e8b4de.png">
+    <h1>Page d'erreur du domaine docker.bzh</h1>
   </div>
 </body>
 </html>
